syntax = "proto3";
package actors.shaker_ice;
option go_package = "github.com/kagari-org/cryonet/gen/actors/shaker_ice";

import "channel/channel.proto";

message OStop {}

message OOnOffer {
  channel.Offer offer = 1;
}

message OOnOfferResponse {
  channel.Answer answer = 1;
}

message OOnCandidate {
  string candidate = 1;
}
